:fire: refactor: update project structure