@@ -13,12 +13,7 @@ configurations {
     }
 }
 
-@Suppress("DEPRECATION")
-val generatedDir = file("${buildDir}/generated/src/main/java")
-val codecGeneration = configurations.create("codecGeneration")
-
 dependencies {
-    "codecGeneration"(libs.sbe)
     implementation(libs.agrona)
     implementation(libs.aeron)
     implementation(libs.slf4j)
@@ -26,28 +21,24 @@ dependencies {
     implementation(project(":bank-libs:common"))
     implementation(project(":bank-libs:cluster-protocol"))
     implementation("org.springframework.boot:spring-boot-starter")
-    implementation("org.springframework.boot:spring-boot-starter-web")
     compileOnly("org.projectlombok:lombok")
     developmentOnly("org.springframework.boot:spring-boot-devtools")
     annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
     annotationProcessor("org.projectlombok:lombok")
 }
 
-application {
-    mainClass.set("gc.garcol.bankapp.BankAppApplication")
-}
-
-sourceSets {
-    main {
-        java.srcDirs("src/main/java", generatedDir)
-    }
-}
-
 tasks {
+    task("runSingleNodeCluster", JavaExec::class) {
+        group = "run"
+        classpath = sourceSets.main.get().runtimeClasspath
+        mainClass.set("gc.garcol.cluster.ClusterApplication")
+        jvmArgs("--add-opens=java.base/sun.nio.ch=ALL-UNNAMED")
+    }
+
     task("uberJar", Jar::class) {
         group = "uber"
         manifest {
-            attributes["Main-Class"] = "gc.garcol.bankapp.BankAppApplication"
+            attributes["Main-Class"] = "gc.garcol.cluster.ClusterApplication"
             attributes["Add-Opens"] = "java.base/sun.nio.ch"
         }
         archiveClassifier.set("uber")
@@ -57,24 +48,5 @@ tasks {
         from({
             configurations.runtimeClasspath.get().filter { it.name.endsWith("jar") }.map { zipTree(it) }
         })
-    }
-    task("generateCodecs", JavaExec::class) {
-        group = "sbe"
-        val codecsFile = "src/main/resources/protocol/protocol-codecs.xml"
-        val sbeFile = "src/main/resources/protocol/fpl/sbe.xsd"
-        inputs.files(codecsFile, sbeFile)
-        outputs.dir(generatedDir)
-        classpath = codecGeneration
-        mainClass.set("uk.co.real_logic.sbe.SbeTool")
-        args = listOf(codecsFile)
-        systemProperties["sbe.output.dir"] = generatedDir
-        systemProperties["sbe.target.language"] = "Java"
-        systemProperties["sbe.validation.xsd"] = sbeFile
-        systemProperties["sbe.validation.stop.on.error"] = "true"
-        outputs.dir(generatedDir)
-    }
-
-    compileJava {
-        dependsOn("generateCodecs")
     }
 }
